# pcb-creator

./: .coveragerc  .gitignore  AGENTS.md  ARCHITECTURE.md  ESCAPE_ROUTER_SPEC.md  FLOW.md  NOTICE.md  README.md  STANDARDS.md  TEST_COVERAGE_BUG_REPORT.md  VISUALIZATION.md  install.sh  mcp_envelope.py  mcp_server.py  pcb-creator  pyproject.toml
.claude/: launch.json  plan.md  settings.local.json
exporters/: __init__.py  _gnd_stitch.py  assembly_drawing.py  bom_csv_exporter.py  component_heights.py  dsn_exporter.py  dxf_parser.py  gerber_exporter.py  kicad_exporter.py  kicad_importer.py  kicad_mod_parser.py  kicad_netlist_importer.py  model_fetcher.py  parametric_models.py  ses_importer.py  step_exporter.py  stroke_font.py
optimizers/: __init__.py  escape_router.py  fiducials.py  freerouter.py  initial_placement.py  ipc7351.py  pad_geometry.py  placement_optimizer.py  ratsnest.py  route_cleanup.py  routed_board.py  router.py
orchestrator/: __init__.py  __main__.py  approval_server.py  cache.py  circuit_builder.py  cli.py  config.py  gradio_app.py  project.py  quoting.py  runner.py  stages.py  vision_review.py
schemas/: bom_schema.json  circuit_schema.json  placement_schema.json  routed_schema.json
scripts/: diagnose_pad_shorts.py  eval_boards.py  reroute_kicad_pcb.py  run_9b_suite.sh  spike_4layer_two_sided.py  spike_bottom_side.py  spike_demand_map.py  spike_fine_pitch.py  spike_freerouting.py  spike_freerouting_progress.py  test_stm32_4layer.py
skills/: ae_orchestrate.md  qa_review.md  schematic_engineer.md
test/: fix_session_prompt.md  fix_session_prompt_v2.md  fix_session_prompt_v3.md  run_all.sh  test_catalog.md
tests/: arduino_uno_netlist_reference.json  arduino_uno_outline.dxf  conftest.py  test_agent_sim.py  test_alias_priority.py  test_arduino_uno.json  test_attiny_pot_led.json  test_b3_plane_pad_completion.py  test_b4a_export_pour.py  test_b5_export_stitch.py  (+64 more)
(+74 files in other folders)
