[project]
name = "pcb-creator"
version = "0.1.0"
description = "AI-driven PCB design: natural language to manufacturer-ready files"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0",
    "jinja2>=3.1",
    "jsonschema>=4.0",
    "gerber-writer>=0.4",
    "cairosvg>=2.7",
    # 3.x required: tests (and any in-process caller) invoke @mcp.tool()
    # functions directly; 2.x FunctionTool objects are not callable.
    "fastmcp>=3",
    # platformio (common on Pi) caps at click<8.4; litellm allows <9.0.
    # Pin to the intersection so both coexist in the same environment.
    "click>=8.0.4,<8.4",
]

[project.optional-dependencies]
dxf = ["ezdxf>=1.0"]
3d = ["easyeda2kicad>=0.8"]

[project.scripts]
pcb-creator = "orchestrator.cli:main"
pcb-creator-mcp = "mcp_server:main"

[tool.setuptools]
packages = ["exporters", "optimizers", "orchestrator"]
py-modules = ["mcp_server"]
